# wickra-strategy-ci

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  action.yml  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/requirements/: ci-dev.in
.github/scripts/: check-cbindgen.sh
.github/workflows/: action-selftest.yml  bench.yml  ci.yml  links.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/WickraStrategyCi/: DllResolver.cs  Native.cs  README.md  Session.cs  WickraStrategyCi.csproj
bindings/csharp/WickraStrategyCi.Tests/: CrossLanguageTests.cs  GoldenTests.cs  SessionTests.cs  WickraStrategyCi.Tests.csproj
bindings/go/: README.md  cross_language_test.go  go.mod  golden_test.go  session_test.go  wickra.go
bindings/go/include/: wickra_strategy_ci.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/strategyci/: Native.java  Session.java
bindings/java/src/test/java/org/wickra/strategyci/: CrossLanguageTest.java  GoldenTest.java  SessionTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  cross_language.test.js  golden.test.js  session.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_strategy_ci/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_cross_language.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: session.R
bindings/r/src/: Makevars  Makevars.win  wickra_strategy_ci.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/strategy-ci-bench/: Cargo.toml
crates/strategy-ci-bench/benches/: strategy_ci.rs
crates/strategy-ci-cli/: Cargo.toml
crates/strategy-ci-cli/src/: args.rs  load.rs  main.rs  run.rs
crates/strategy-ci-core/: Cargo.toml
crates/strategy-ci-core/src/: config.rs  error.rs  fuzz.rs  lib.rs  model.rs  property.rs  runner.rs  session.rs  tests.rs  tolerance.rs
crates/strategy-ci-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs  suite_eq_seq.rs
crates/strategy-ci-core/tests/common/: mod.rs
docs/: Cookbook.md  FUZZING.md  GITHUB_ACTION.md  PROPERTIES.md  TESTS.md  TOLERANCES.md
examples/: README.md
examples/c/: CMakeLists.txt  run.c  run.cpp
examples/csharp/Run/: Program.cs  Run.csproj
examples/go/: go.mod  run.go
examples/java/: Run.java
examples/node/: package.json  run.js
examples/python/: run.py
examples/r/: run.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diff_reports.rs  property_eval.rs  run_test.rs  test_parse.rs
golden/: README.md
golden/data/: sym-01.csv  sym-02.csv  sym-03.csv  sym-04.csv  sym-05.csv  sym-06.csv
golden/expected/: crossover.json  fuzz.json  mean_reversion.json  momentum.json  property_only.json  suite.json
golden/tests/: crossover.json  fuzz.json  mean_reversion.json  momentum.json  property_only.json
