[package]
name = "wickra-strategy-ci-python"
description = "Python bindings for wickra-strategy-ci: the data-driven strategy test runner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_strategy_ci"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
strategy-ci-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
