[package]
name = "wickra-strategy-ci"
description = "Reference CLI for Wickra Strategy-CI: run golden/property/fuzz tests for trading strategies and gate CI on the result."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "wickra-strategy-ci"
path = "src/main.rs"

[dependencies]
strategy-ci-core.workspace = true
serde_json.workspace = true
clap.workspace = true
