[package]
name = "strategy-ci-core"
description = "Data-driven core of Wickra Strategy-CI: golden-pin a strategy's backtest report, assert tolerances and invariant properties, and fuzz-test against seeded data perturbations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# `parallel` runs a suite's tests concurrently with rayon; it is on by default.
# The wasm binding builds with --no-default-features for a sequential run that is
# byte-identical to the parallel one. `proof` surfaces a deterministic report hash
# (from the wickra-proof core) in each TestResult.
default = ["parallel"]
parallel = ["dep:rayon"]
proof = ["dep:proof-core", "dep:blake3"]

[dependencies]
# The backtest engine under test: strategy-ci forwards the opaque StrategySpec
# JSON to its run_json and golden-pins the returned BacktestReport.
wickra-backtest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Deterministic PRNG for the fuzz-data generator (seeded; never thread_rng).
rand.workspace = true
rand_pcg.workspace = true
# Data-parallel suite execution; optional (the `parallel` feature).
rayon = { workspace = true, optional = true }
# Optional verifiable report hash; optional (the `proof` feature).
proof-core = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
