[package]
name = "wickra-strategy-ci-example"
description = "A runnable Rust example for the Wickra Strategy-CI core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "strategy_ci"
path = "src/main.rs"

[dependencies]
strategy-ci-core = { workspace = true }
serde_json = { workspace = true }
